// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentComponent handles missing avatar with fallback 1`] = `
<div>
  <div
    class="space-y-3 "
  >
    <div
      class="flex gap-3"
    >
      <span
        class="relative flex size-8 shrink-0 overflow-hidden rounded-full h-8 w-8 flex-shrink-0"
        data-slot="avatar"
      >
        <span
          class="bg-muted flex size-full items-center justify-center rounded-full"
          data-slot="avatar-fallback"
        >
          t
        </span>
      </span>
      <div
        class="flex-1 min-w-0 space-y-2"
      >
        <div
          class="flex items-center gap-2 text-sm"
        >
          <span
            class="font-medium truncate"
          >
            testuser
          </span>
          <span
            class="text-muted-foreground whitespace-nowrap"
          >
            June 12, 2025
          </span>
        </div>
        <p
          class="text-sm leading-relaxed break-words hyphens-auto whitespace-pre-wrap word-break-break-word overflow-wrap-anywhere"
        >
          This is a test comment content.
        </p>
        <div
          class="flex items-center gap-4 text-xs text-muted-foreground"
        >
          <button
            class="flex items-center gap-1 hover:text-foreground transition-colors"
          >
            <svg
              data-testid="heart-icon"
            />
            <span>
              5
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentComponent renders reply comment correctly 1`] = `
<div>
  <div
    class="space-y-3 ml-12"
  >
    <div
      class="flex gap-3"
    >
      <span
        class="relative flex size-8 shrink-0 overflow-hidden rounded-full h-8 w-8 flex-shrink-0"
        data-slot="avatar"
      >
        <span
          class="bg-muted flex size-full items-center justify-center rounded-full"
          data-slot="avatar-fallback"
        >
          t
        </span>
      </span>
      <div
        class="flex-1 min-w-0 space-y-2"
      >
        <div
          class="flex items-center gap-2 text-sm"
        >
          <span
            class="font-medium truncate"
          >
            testuser
          </span>
          <span
            class="text-muted-foreground whitespace-nowrap"
          >
            June 12, 2025
          </span>
        </div>
        <p
          class="text-sm leading-relaxed break-words hyphens-auto whitespace-pre-wrap word-break-break-word overflow-wrap-anywhere"
        >
          This is a test comment content.
        </p>
        <div
          class="flex items-center gap-4 text-xs text-muted-foreground"
        >
          <button
            class="flex items-center gap-1 hover:text-foreground transition-colors"
          >
            <svg
              data-testid="heart-icon"
            />
            <span>
              5
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentComponent renders top-level comment correctly 1`] = `
<div>
  <div
    class="space-y-3 "
  >
    <div
      class="flex gap-3"
    >
      <span
        class="relative flex size-8 shrink-0 overflow-hidden rounded-full h-8 w-8 flex-shrink-0"
        data-slot="avatar"
      >
        <span
          class="bg-muted flex size-full items-center justify-center rounded-full"
          data-slot="avatar-fallback"
        >
          t
        </span>
      </span>
      <div
        class="flex-1 min-w-0 space-y-2"
      >
        <div
          class="flex items-center gap-2 text-sm"
        >
          <span
            class="font-medium truncate"
          >
            testuser
          </span>
          <span
            class="text-muted-foreground whitespace-nowrap"
          >
            June 12, 2025
          </span>
        </div>
        <p
          class="text-sm leading-relaxed break-words hyphens-auto whitespace-pre-wrap word-break-break-word overflow-wrap-anywhere"
        >
          This is a test comment content.
        </p>
        <div
          class="flex items-center gap-4 text-xs text-muted-foreground"
        >
          <button
            class="flex items-center gap-1 hover:text-foreground transition-colors"
          >
            <svg
              data-testid="heart-icon"
            />
            <span>
              5
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
